test/message/fail/class-methods-private-throw-write.out
*%(basename)s:10: SyntaxError: Private method '#a' is not writable
    this.#a = 1;
        ^^
SyntaxError: Private method '#a' is not writable
    at *%(basename)s:13:1